# JniDemo

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib2.cpp  native-static-lib.cpp  native.cpp  native.h
app/src/main/cpp/aStringTest/: native-lib.cpp  native-lib2.cpp  native-static-lib.cpp
app/src/main/cpp/log/: log.cpp  log.h
app/src/main/java/com/example/: MainActivity.java  Native.java  Native2.java  SecondNative.java
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/java/com/example/myapplication/aStringTest/: Native.java  Native2.java  StaticNative.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
